<resources>
    <string name="app_name">优体教练</string>
    <string name="app_press_again_to_exit">再按一次退出应用</string>
     <string name="net_tips">网络连接失败，请设置网络！</string>
     <string name="data_tips">获取数据失败，请稍后再试！</string>
     <string name="laoding_tips">小U玩命加载中...</string>
     <string name="pay_tips">正在支付中...</string>
    <string name="left_menu_kc">课程</string>
    <string name="left_menu_jl">教练</string>
    <string name="left_menu_sp">视频</string>
    <string name="left_menu_sq">社区</string>
    <string name="ksyd">快速预定</string>
    <string name="detail">详情</string>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <string name="ksyd_400">拨打400电话，说出您的需求，我们会为您推荐最适合的教练和课程</string>
    <string name="ksyd_online">在线联系客服MM，说出您的需求，我们会为您推荐最适合的教练和课程</string>
    <string name="chat_tips">亲~ 感谢你咨询优体教练，教练课程正在上课，如未及时回复，您可以拨打电话或者咨询优体客服MM</string>
    <string name="more_option_detail">选择项目</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_null">没有更多数据...</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="user_signature">这家伙很懒，还没有留下签名</string>
	 <string name="user_edit">编辑个人资料</string>
	<string name="user_account">我的账户</string>
	<string name="user_course">我的课程</string>
	<string name="user_coach">我的教练</string>
	<string name="user_message">我的消息</string>
	<string name="system_name">系统小秘书</string>
	<string name="user_download">我的下载</string>
	<string name="downloading">下载中</string>
	<string name="user_favorite">我的喜欢</string>
	<string name="more">更多</string>
	<string name="booked">已预约</string>
	<string name="buy">已购买</string>
	<string name="notpay">未支付</string>
	<string name="current_course">当前课程</string>
	<string name="past_course">历史课程</string>
	<string name="cancel">取消</string>
	<string name="issue">发布</string>
	<string name="all">全部</string>
	<string name="bad">差评</string>
	<string name="middle">中评</string>
	<string name="great">好评</string>
	<string name="setting_recharge_item">%1$s元</string>
	<string name="setting_recharge_item_give">%1$s元  送%2$s元</string>
    <string name="jl_near">离你最近的教练</string>
    <string name="yuyueren">预约人</string>
    <string name="jiaolian">教         练：</string>
    <string name="xiangmu">项         目：</string>
    <string name="kechengdanjia">课程单价：</string>
    <string name="kechengshichang">课程时长：</string>
    <string name="totalprice">总         价：</string>
    <string name="state">状         态：</string>
    <string name="notpayed">未付款</string>
    <string name="jl_detail_jianjie">简介</string>
    <string name="jl_detail_pinglun">评论</string>
    <string name="sq_title">社区</string>
    <string name="sq_lanmu_zx">在线咨询</string>
    <string name="sq_lanmu_drx">达人秀</string>
    <string name="sq_on">在线</string>
    <string name="sq_off">离线请留言</string>
    <string name="sq_xiangmu">项目：</string>
	<string name="sq_xixunshu">人咨询过</string>
	<string name="pinglunhint">评论一下下吧</string>
	<string name="spxq_title">视频详情</string>
	<string name="spxq_mulu">目录</string>
	<string name="spxq_zuijin">距离你最近的线下课程</string>
	<string name="spxq_zan">点赞</string>
	<string name="spxq_xz">下载</string>
	<string name="spxq_pl">评论</string>
	<string name="spxq_jianjie">简介</string>
	<string name="spxq_fx">分享</string>
	<string name="kc_hot">热门课程</string>
	<string name="kc_buy">购买课程</string>
	<string name="kc_99">99元包月购买</string>
	<string name="kc_299">299元包月购买</string>
	<string name="kc_399">399元包月购买</string>
	<string name="order_true">确认订单</string>
	<string name="coach_kc_buy">购买私教课</string>
	<string name="type_one">用户上门</string>
	<string name="type_two">教练上门</string>
	<string name="type_three">协商地点</string>
	<string name="secret">请输入密码</string>
	<string  name="sign">注册</string>
	<string name="login">登录</string>
	<string name="forgetsecret">忘记密码</string>
	<string name="otherway">其他方式登录</string>
	<string name="yonghuxieyi">我已阅读并同意用户协议</string>
	<string name="login_next">下一步</string>
	<string name="yourphone">请输入您的手机号</string>
	<string name="recomcode">请输入推荐码，如果没有可以不填</string>
	<string name="yanzhengma">请输入验证码</string>
	<string name="finish">完成</string>
	<string name="smsyanzhengma">手机短信验证码已成功发送，请验证后输入</string>
	<string name="setpassword">您可以重新设置您的登陆密码</string>
	<string name="newpassword">请输入新密码</string>
	<string name="confirmpassword">请确认新密码</string>
	 <string name="register2_send_again">重新发送(%1$s)</string>
	<string name="issued">已发照片</string>
	<string name="issuephoto">发布照片</string>
	<string name="save">保存</string>
	<string name="editdata">编辑个人资料</string>
	<string name="nickname">昵称 :</string>
	<string name="sex">性别 :</string>
	<string name="signature">签名 :</string>
	<string name="mobile">手机 :</string>
	<string name="modifypassword">修改登录密码 </string>
	<string name="setting_change_password">修改登陆密码</string>
	<string name="setting_next_step">下一步</string>
	<string name="setting_send_again">重新发送(%1$s)</string>
	<string name="setting_change_password_prompt">已给注册时填写的手机号码：%1$s****%2$s, 发送一条验证码</string>
	<string name="setting_setting_new_prompt">您可以重新设置您的登陆密码,密码需由6-16位数字组成</string>
	<string name="setting_old_pass">旧密码</string>
	<string name="setting_new_pass">新密码</string>
	<string name="setting_ensure_pass">确认密码</string>
	<string name="setting_complete">完成</string>
	<string name="setting_change_pass_error_null">设置密码不能为空</string>
	<string name="setting_change_pass_error_validate">两次设置密码不同</string>
	<string name="setting_change_pass_success">设置密码成功</string>
	<string name="setting_recharge_way_ali_pay">支付宝客户端充值</string>
	<string name="setting_more">更多</string>
	<string name="setting_exit">退出当前账号</string>
	<string name="setting_ali_pay">支付宝充值</string>
	<string name="setting_pay_pass_manager_title">设置支付密码</string>
	<string name="setting_change_pay_pass">修改支付密码</string>
	<string name="setting_set_pay_pass">设置支付密码</string>
</resources>