<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:youti="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/user_bg"
    android:orientation="vertical" >

    <com.youti.view.TitleBar
        android:id="@+id/titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        youti:titleText="@string/setting_change_password" />
    
    <LinearLayout android:id="@+id/layout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:orientation="vertical" 
        >
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"
            android:textAppearance="@style/TextAppearance.Medium.Gray"
            android:text="@string/setting_setting_new_prompt"
            />
        <EditText android:id="@+id/old_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
			style="@style/EditText"
			android:password="true"
			android:inputType="textPassword"
			android:hint="@string/setting_old_pass"   
			android:gravity="center_vertical|left"
            android:textAppearance="@style/TextAppearance.Medium"
			android:textSize="18sp"       
			android:paddingTop="5dip"
			android:paddingBottom="5dip"     
			android:layout_marginBottom="15dip"    
            />
        <EditText android:id="@+id/new_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
			style="@style/EditText"
			android:password="true"
			android:inputType="textPassword"
			android:hint="@string/setting_new_pass"   
			android:gravity="center_vertical|left"
            android:textAppearance="@style/TextAppearance.Medium"
			android:textSize="18sp"       
			android:paddingTop="5dip"
			android:paddingBottom="5dip"     
			android:layout_marginBottom="15dip"    
            />
        
        <EditText android:id="@+id/ensure_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
			style="@style/EditText"
			android:password="true"
			android:inputType="textPassword"
			android:hint="@string/setting_ensure_pass"   
			android:gravity="center_vertical|left"
            android:textAppearance="@style/TextAppearance.Medium"
			android:textSize="18sp"       
			android:paddingTop="5dip"
			android:paddingBottom="5dip"   
			android:layout_marginBottom="15dip"     
            />
        
        <Button
            android:id="@+id/complete"
            style="@style/Button.Blue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_complete" />
        
    </LinearLayout>

</LinearLayout>