<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
        xmlns:tools="http://schemas.android.com/tools"
    xmlns:youti="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical" >
    
            <com.youti.view.TitleBar
        android:id="@+id/index_titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        youti:titleText="@string/left_menu_kc" >
    </com.youti.view.TitleBar>
    
    <LinearLayout 
        android:layout_marginTop="@dimen/x30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"     
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        >
        <EditText 
            android:inputType="textPassword"
            android:id="@+id/newpaw"
            android:textColorHint="#cccccc"
            android:paddingLeft="@dimen/x20"
            android:background="@drawable/forget_bar"   
	    android:hint="@string/newpassword"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	   
	    />
          <EditText 
              android:inputType="textPassword"
              android:id="@+id/confirmpaw"
              android:layout_marginTop="@dimen/x10"
            android:textColorHint="#cccccc"
            android:paddingLeft="@dimen/x20"
            android:background="@drawable/forget_bar"   
	    android:hint="@string/confirmpassword"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	   
	    />
        <TextView 
            android:id="@+id/tv_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setpassword"
            android:textColor="#999999"
            android:layout_marginTop="@dimen/x20"
            android:layout_marginLeft="@dimen/x20"
            />
        <Button 
            android:id="@+id/finish"
            android:layout_marginTop="@dimen/x130"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:background="@drawable/forget_button"
            />
    </LinearLayout>
	
</LinearLayout>