<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:youti="http://schemas.android.com/apk/res-auto"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical" >
    
    
        <com.youti.view.TitleBar
        android:id="@+id/index_titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        youti:titleText="@string/left_menu_kc" >
    </com.youti.view.TitleBar>
    
    <LinearLayout 
        android:layout_marginTop="@dimen/x30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"     
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/yanzhengma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/forget_again"
                android:hint="@string/yanzhengma"
                android:paddingLeft="@dimen/x20"
                android:textColorHint="#cccccc" />

            <TextView
                android:id="@+id/sendagain"
                android:textSize="@dimen/x30"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#333333"
                android:layout_marginRight="@dimen/x10"
                android:layout_alignParentRight="true"
                android:text="重新发送(60)" />
            
        </RelativeLayout>
       
        <TextView 
            android:layout_marginLeft="@dimen/x20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#999999"
            android:layout_marginTop="@dimen/x20"
            android:text="@string/smsyanzhengma"
            />
        <Button 
            android:id="@+id/btn_next"
            android:layout_marginTop="@dimen/x80"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_next"
            android:background="@drawable/forget_button"
            />
    </LinearLayout>
	
</LinearLayout>