<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x120"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/x20"
        android:paddingRight="@dimen/x20" >

        <TextView
            android:id="@+id/tv_cancle"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="#666666" />

        <TextView
             android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/editdata"
            android:textColor="#333333" />

        <TextView
            android:id="@+id/tv_save"
             android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="#6049a1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee" />

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x95"
        android:gravity="center_vertical"
        android:orientation="horizontal"
       android:layout_marginLeft="@dimen/x30" >

        <TextView
             android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textColor="#666666" />

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
           android:layout_marginLeft="@dimen/x30"
            android:text=""
            android:textColor="#333333" />
    </LinearLayout>

   

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee" />

    <LinearLayout
        android:id="@+id/ll_sex"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x95"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/x30" >

        <TextView
             android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textColor="#666666" />

        <TextView
             android:textSize="18sp"
            android:id="@+id/tv_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
             android:layout_marginLeft="@dimen/x30"
            android:text=""
            android:textColor="#333333" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x95"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/x30" >

        <TextView
             android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signature"
            android:textColor="#666666" />

        <EditText
            android:id="@+id/et_introduce"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_marginLeft="@dimen/x30"
            android:text="介绍一下自己吧"
            android:textColor="#333333" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x95"
        android:gravity="center_vertical"
        android:orientation="horizontal"
       android:layout_marginLeft="@dimen/x30" >

        <TextView
             android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textColor="#666666" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
           android:layout_marginLeft="@dimen/x30"
            android:text="1234567890"
            android:textColor="#333333" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x95"
       android:gravity="center_vertical"
        android:id="@+id/rl_modifypassword"
        >

        <TextView
               android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x30"
             android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modifypassword"
            android:textColor="#666666" />

        <ImageView
            android:layout_centerVertical="true"
           android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/x25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/edit_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee" />

</LinearLayout>