<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:youti="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.youti.view.TitleBar
        android:id="@+id/index_titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        youti:titleText="@string/left_menu_kc" >
    </com.youti.view.TitleBar>

    
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/wdjl_fengexian" />

   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_marginTop="@dimen/x30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"     
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        >
        <EditText 
            android:id="@+id/phonenumber"
            android:textColorHint="#cccccc"
            android:paddingLeft="@dimen/x20"
            android:background="@drawable/forget_bar"   
	    android:hint="@string/yourphone"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	   
	    />
        
        <Button 
            android:id="@+id/btn_next"
            android:layout_marginTop="@dimen/x100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_next"
            android:background="@drawable/forget_button"
            />
    </LinearLayout>
	
</LinearLayout>

</LinearLayout>