<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:youti="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <com.youti.view.TitleBar
        android:id="@+id/index_titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        youti:titleText="@string/left_menu_kc" >
    </com.youti.view.TitleBar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/wdjl_fengexian" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x80"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_first"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/left_menu_kc"
            android:textColor="#6049a1"
            android:textSize="18dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/x50"
            android:layout_gravity="center"
            android:background="@drawable/wdjl_shuxian" />

        <TextView
            android:id="@+id/tv_second"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/left_menu_jl"
            android:textColor="#666666"
            android:textSize="18dp" />
         <View
            android:layout_width="1dp"
            android:layout_height="@dimen/x50"
            android:layout_gravity="center"
            android:background="@drawable/wdjl_shuxian" />

        <TextView
            android:id="@+id/tv_third"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/left_menu_sp"
            android:textColor="#666666"
            android:textSize="18dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/wdjl_fengexian" />
    

     <com.youti.view.LazyViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </com.youti.view.LazyViewPager>

</LinearLayout>